--- a/frontend/src/components/variantCarousel.css
+++ b/frontend/src/components/variantCarousel.css
@@ -149,7 +149,7 @@
 
   .carousel-image-wrap {
     height: 120px;
-    max-height: 35vw;
+    max-height: 30vw;
     min-height: 90px;
     padding: 0;
     background: #fff;
@@ -159,12 +159,12 @@
   }
 
   .carousel-image-wrap img {
-    width: 100%;
+    width: auto;
     height: auto;
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
     display: block;
-    margin: 0 auto;
+    margin: auto;
   }
 }
